# cpp-template-project

./: .gitignore  CMakeLists.txt  README.md  environment.yml
.github/workflows/: CI.yml
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: a_secondary_page.rst  conf.py  index.rst
include/: dynamic_array.h  expression.h  flexible_container.h  is_raw_pointer.h  my_type.h  pair.h  some_library.h  split.h  student.h  sum.h  transform.h  zipfs.h
src/: CMakeLists.txt  CSR_Format.cpp  casting.cpp  doubly_linked_list.cpp  doubly_linked_list.h  dynamic_array.cpp  main.cpp  main_zipfs_algorithms.cpp  main_zipfs_containers.cpp  memory_layout.cpp  my_library.cpp  my_library.h  pointer_arithmetics.cpp  privilege_escalation.cpp  rule_of_0.cpp  some_library.cpp  split.cpp  student.cpp
tests/: CMakeLists.txt  test_CSR.cpp  test_array.cpp  test_doubly_linked_list.cpp  test_expression.cpp  test_flexible_container.cpp  test_my_library.cpp  test_mytype.cpp  test_pair.cpp  test_raw_pointer.cpp  test_some_library.cpp  test_split.cpp  test_student.cpp  test_sum.cpp  test_transform.cpp  test_zipfs.cpp
